# ritmo

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  dockerfile  index.html  nginx.conf
.github/workflows/: ci.yml
.zed/: settings.json
public/icon/: favicon_gen.sh  manifest.json  sizes.txt
public/icon/favicon/: manifest.json
src/: export.rs  habit.rs  home.rs  import.rs  main.rs  main.scss  prelude.rs
